--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -103,12 +103,12 @@
           </div>
         </div>
         <div class="col-md-4 col-lg-3">
-          <div class="box-card h-100">
+          <a href="/categories" class="box-card h-100 d-block text-reset text-decoration-none">
             <div class="flap"></div>
             <h5 class="mb-2">Categories</h5>
             <p class="mb-2">Create and manage categories and sub-categories.</p>
             <span class="label">Category Management</span>
-          </div>
+          </a>
         </div>
         <div class="col-md-4 col-lg-3">
                       <a th:href="@{/suppliers}" class="box-card h-100 d-block text-reset text-decoration-none">
