Added locations fontend-updated Web Contoller

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -95,7 +95,7 @@
           </a>
         </div>
         <div class="col-md-4 col-lg-3">
-          <a th:href="@{/equipment}" class="box-card h-100 d-block text-reset text-decoration-none">            <div class="flap"></div>
+          <a th:href="@{/locations}" class="box-card h-100 d-block text-reset text-decoration-none">            <div class="flap"></div>
             <h5 class="mb-2">Locations</h5>
             <p class="mb-2">Manage warehouse zones, aisles, racks, and shelves.</p>
             <span class="label">Warehouse Hierarchy</span>
