Added Shipment fontend-updated Web Contoller

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -71,20 +71,20 @@
           </a>
         </div>
         <div class="col-md-4 col-lg-3">
-          <div class="box-card h-100">
+          <a th:href="@{/shipments}" class="box-card h-100 d-block text-reset text-decoration-none">
             <div class="flap"></div>
             <h5 class="mb-2">Shipments</h5>
             <p class="mb-2">Create and track inbound/outbound shipments.</p>
             <span class="label">Shipment Management</span>
-          </div>
+          </a>
         </div>
         <div class="col-md-4 col-lg-3">
-          <div class="box-card h-100">
+          <a href="#" class="box-card h-100 d-block text-reset text-decoration-none">
             <div class="flap"></div>
             <h5 class="mb-2">Inventory Movements</h5>
             <p class="mb-2">View the complete audit trail of stock changes.</p>
             <span class="label">Movement History</span>
-          </div>
+          </a>
         </div>
         <div class="col-md-4 col-lg-3">
           <a th:href="@{/equipment}" class="box-card h-100 d-block text-reset text-decoration-none">
@@ -118,12 +118,12 @@
           </a>
         </div>
         <div class="col-md-4 col-lg-3">
-          <div class="box-card h-100">
+          <<a href="#" class="box-card h-100 d-block text-reset text-decoration-none">
             <div class="flap"></div>
             <h5 class="mb-2">Reports</h5>
             <p class="mb-2">Access pre-configured inventory and shipment reports.</p>
             <span class="label">Reports</span>
-          </div>
+          </a>
         </div>
       </div>
     </div>
