--- a/src/main/resources/templates/shipment-items.html
+++ b/src/main/resources/templates/shipment-items.html
@@ -17,7 +17,7 @@
     <div id="nav" class="collapse navbar-collapse">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link fw-semibold d-flex align-items-center" th:href="@{/dashboard}" title="Back">
+          <a class="nav-link fw-semibold d-flex align-items-center" th:href="@{/dashboard2}" title="Back">
             Back <img th:src="@{/images/back-button.png}" alt="Back" style="width: 20px; height: 20px; margin-left: 5px;">
           </a>
         </li>
@@ -50,8 +50,8 @@
       <table class="table table-borderless mb-0 fixed-header-table">
         <thead>
           <tr>
-            <th class="pb-3"><span class="label">Shipment ID</span></th>
-            <th class="pb-3"><span class="label">Item ID</span></th>
+            <th class="pb-3"><span class="label">Shipment Number</span></th>
+            <th class="pb-3"><span class="label">Item Code</span></th>
             <th class="pb-3"><span class="label">Quantity</span></th>
             <th class="pb-3"><span class="label">Unit Price</span></th>
             <th class="pb-3"><span class="label">Total Price</span></th>
