--- a/src/main/resources/templates/maintenance-schedule.html
+++ b/src/main/resources/templates/maintenance-schedule.html
@@ -17,7 +17,7 @@
     <div id="nav" class="collapse navbar-collapse">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link fw-semibold d-flex align-items-center" th:href="@{/dashboard}" title="Back">
+          <a class="nav-link fw-semibold d-flex align-items-center" th:href="@{/dashboard2}" title="Back">
             Back <img th:src="@{/images/back-button.png}" alt="Back" style="width: 20px; height: 20px; margin-left: 5px;">
           </a>
         </li>
