--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" th:href="@{/css/dashboard-ops.css}" />
   <link rel="icon" type="image/x-icon" th:href="@{/images/favicon.ico}">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
+<meta th:if="${permissionsJson != null}" name="permissions-json" th:content="${permissionsJson}">
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light">
@@ -21,7 +22,7 @@
       </button>
       <div id="nav" class="collapse navbar-collapse">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
+                     <li class="nav-item" th:if="${allowSettings}">
             <a class="nav-link fw-semibold d-flex align-items-center" th:href="@{/settings}" title="Settings">
               Settings <img th:src="@{/images/settings.png}" alt="Settings" style="width: 20px; height: 20px; margin-left: 5px;">
             </a>
