New fixes for Role Initializer

--- a/src/main/resources/templates/settings.html
+++ b/src/main/resources/templates/settings.html
@@ -172,10 +172,10 @@
       <table class="table table-borderless mb-0 fixed-header-table">
         <thead>
           <tr>
-            <th class="pb-3"><span class="label" class="text-bolder">Role Name</span></th>
-            <th class="pb-3"><span class="label" class="text-bolder">Description</span></th>
-            <th class="pb-3"><span class="label" class="text-bolder">Permissions</span></th>
-            <th class="pb-3"><span class="label" class="text-bolder">Actions</span></th>
+            <th class="pb-3"><span class="label text-bolder">Role Name</span></th>
+            <th class="pb-3"><span class="label text-bolder">Description</span></th>
+            <th class="pb-3"><span class="label text-bolder">Permissions</span></th>
+            <th class="pb-3"><span class="label text-bolder">Actions</span></th>
           </tr>
         </thead>
         <tbody id="rolesTbody">
